re PR c++/61465 (Bogus parameter set but not used warning in constructor initialization list)

PR c++/61465
	* call.c (convert_like_real) [ck_identity]: Call mark_rvalue_use
	after pulling out an element from a CONSTRUCTOR.

From-SVN: r215476